// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> matches snapshot with verified user 1`] = `
<div>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#353535",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "#ffffff",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingBottom": 10,
        "paddingTop": 10,
        "textAlign": "center",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    You're logged in as:
    <br />
    Gregory
     
    Goijaerts
    <br />
    <div
      className="row center-xs"
      style={
        Object {
          "margin": 20,
        }
      }
    >
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://www.box.com/home"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Box logo"
              src="/assets/img/box.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            Gregory Goijaerts
            <br />
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <div
                className={undefined}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                    "backgroundColor": "#353535",
                    "borderRadius": 2,
                    "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                           0 1px 4px rgba(0, 0, 0, 0.12)",
                    "boxSizing": "border-box",
                    "color": "#ffffff",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "minWidth": 88,
                    "muiPrepared": true,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              >
                <button
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  onTouchTap={[Function]}
                  style={
                    Object {
                      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                      "backgroundColor": "#303F9F",
                      "border": 10,
                      "borderRadius": 2,
                      "boxSizing": "border-box",
                      "cursor": "pointer",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": "inherit",
                      "fontWeight": "inherit",
                      "height": 36,
                      "lineHeight": "36px",
                      "margin": 0,
                      "muiPrepared": true,
                      "outline": "none",
                      "padding": 0,
                      "position": "relative",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "verticalAlign": null,
                      "width": "100%",
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  <div
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": false,
                          "borderRadius": 2,
                          "height": 36,
                          "muiPrepared": true,
                          "top": 0,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        }
                      }
                    >
                      Remove 
                      Box
                    </div>
                  </div>
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://www.dropbox.com"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Dropbox logo"
              src="/assets/img/dropbox.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            Gregory Goijaerts
            <br />
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <div
                className={undefined}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                    "backgroundColor": "#353535",
                    "borderRadius": 2,
                    "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                           0 1px 4px rgba(0, 0, 0, 0.12)",
                    "boxSizing": "border-box",
                    "color": "#ffffff",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "minWidth": 88,
                    "muiPrepared": true,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              >
                <button
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  onTouchTap={[Function]}
                  style={
                    Object {
                      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                      "backgroundColor": "#303F9F",
                      "border": 10,
                      "borderRadius": 2,
                      "boxSizing": "border-box",
                      "cursor": "pointer",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": "inherit",
                      "fontWeight": "inherit",
                      "height": 36,
                      "lineHeight": "36px",
                      "margin": 0,
                      "muiPrepared": true,
                      "outline": "none",
                      "padding": 0,
                      "position": "relative",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "verticalAlign": null,
                      "width": "100%",
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  <div
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": false,
                          "borderRadius": 2,
                          "height": 36,
                          "muiPrepared": true,
                          "top": 0,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        }
                      }
                    >
                      Remove 
                      Dropbox
                    </div>
                  </div>
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://drive.google.com"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Google logo"
              src="/assets/img/google.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            Gregory Goijaerts
            <br />
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <div
                className={undefined}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                    "backgroundColor": "#353535",
                    "borderRadius": 2,
                    "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                           0 1px 4px rgba(0, 0, 0, 0.12)",
                    "boxSizing": "border-box",
                    "color": "#ffffff",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "minWidth": 88,
                    "muiPrepared": true,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              >
                <button
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  onTouchTap={[Function]}
                  style={
                    Object {
                      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                      "backgroundColor": "#303F9F",
                      "border": 10,
                      "borderRadius": 2,
                      "boxSizing": "border-box",
                      "cursor": "pointer",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": "inherit",
                      "fontWeight": "inherit",
                      "height": 36,
                      "lineHeight": "36px",
                      "margin": 0,
                      "muiPrepared": true,
                      "outline": "none",
                      "padding": 0,
                      "position": "relative",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "verticalAlign": null,
                      "width": "100%",
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  <div
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": false,
                          "borderRadius": 2,
                          "height": 36,
                          "muiPrepared": true,
                          "top": 0,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        }
                      }
                    >
                      Remove 
                      Google Drive
                    </div>
                  </div>
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://imgur.com"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Imgur logo"
              src="/assets/img/imgur.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            Crecket
            <br />
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <div
                className={undefined}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                    "backgroundColor": "#353535",
                    "borderRadius": 2,
                    "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                           0 1px 4px rgba(0, 0, 0, 0.12)",
                    "boxSizing": "border-box",
                    "color": "#ffffff",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "minWidth": 88,
                    "muiPrepared": true,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": "100%",
                  }
                }
              >
                <button
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  onTouchTap={[Function]}
                  style={
                    Object {
                      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                      "backgroundColor": "#303F9F",
                      "border": 10,
                      "borderRadius": 2,
                      "boxSizing": "border-box",
                      "cursor": "pointer",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": "inherit",
                      "fontWeight": "inherit",
                      "height": 36,
                      "lineHeight": "36px",
                      "margin": 0,
                      "muiPrepared": true,
                      "outline": "none",
                      "padding": 0,
                      "position": "relative",
                      "textAlign": "center",
                      "textDecoration": "none",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "verticalAlign": null,
                      "width": "100%",
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  <div
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": false,
                          "borderRadius": 2,
                          "height": 36,
                          "muiPrepared": true,
                          "top": 0,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        }
                      }
                    >
                      Remove 
                      Imgur
                    </div>
                  </div>
                </button>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
    <br />
    <div
      className="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4"
    >
      <a
        href="https://telegram.me/uploadbro_bot"
        rel="noopener"
        target="_blank"
      >
        <div
          className={undefined}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#353535",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "#ffffff",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "minWidth": 88,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <button
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            onTouchTap={[Function]}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "backgroundColor": "#ffffff",
                "border": 10,
                "borderRadius": 2,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "display": "inline-block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": "inherit",
                "fontWeight": "inherit",
                "height": 36,
                "lineHeight": "36px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textAlign": "center",
                "textDecoration": "none",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null,
                "width": "100%",
                "zIndex": 1,
              }
            }
            tabIndex={0}
            type="button"
          >
            <div
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                style={
                  Object {
                    "backgroundColor": false,
                    "borderRadius": 2,
                    "height": 36,
                    "muiPrepared": true,
                    "top": 0,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  }
                }
              >
                <img
                  color="#ffffff"
                  src="/assets/img/telegram.svg"
                  style={
                    Object {
                      "marginLeft": 0,
                      "marginRight": 0,
                      "verticalAlign": "middle",
                      "width": 32,
                    }
                  }
                />
              </div>
            </div>
          </button>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Dashboard /> matches snapshot without verified user 1`] = `
<div>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#353535",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "#ffffff",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingBottom": 10,
        "paddingTop": 10,
        "textAlign": "center",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    You're logged in as:
    <br />
     
    <br />
    <div
      className="row center-xs"
      style={
        Object {
          "margin": 20,
        }
      }
    >
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://www.box.com/home"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Box logo"
              src="/assets/img/box.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            <br />
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "#353535",
                  "borderRadius": 2,
                  "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "minWidth": 88,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "100%",
                }
              }
            >
              <button
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#448AFF",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": false,
                        "borderRadius": 2,
                        "height": 36,
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    Add 
                    Box
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://www.dropbox.com"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Dropbox logo"
              src="/assets/img/dropbox.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            <br />
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "#353535",
                  "borderRadius": 2,
                  "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "minWidth": 88,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "100%",
                }
              }
            >
              <button
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#448AFF",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": false,
                        "borderRadius": 2,
                        "height": 36,
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    Add 
                    Dropbox
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://drive.google.com"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Google logo"
              src="/assets/img/google.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            <br />
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "#353535",
                  "borderRadius": 2,
                  "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "minWidth": 88,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "100%",
                }
              }
            >
              <button
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#448AFF",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": false,
                        "borderRadius": 2,
                        "height": 36,
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    Add 
                    Google Drive
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6 col-md-4 col-lg-3"
        style={
          Object {
            "marginBottom": 20,
          }
        }
      >
        <div
          className="box"
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "transparent",
                  "borderRadius": "50%",
                  "boxShadow": "0 3px 10px rgba(0, 0, 0, 0.16),
                         0 3px 10px rgba(0, 0, 0, 0.23)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "muiPrepared": true,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "zIndex": 1000,
                }
              }
            >
              <a
                disabled={false}
                href="https://imgur.com"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                rel="noopener"
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#303F9F",
                    "border": 10,
                    "borderRadius": "50%",
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 40,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": "bottom",
                    "width": 40,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                target="_blank"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "color": "#ffffff",
                          "display": "inline-block",
                          "fill": "#ffffff",
                          "height": 40,
                          "lineHeight": "40px",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </a>
            </div>
            <img
              alt="Imgur logo"
              src="/assets/img/imgur.svg"
              style={
                Object {
                  "height": 120,
                  "zIndex": 5,
                }
              }
            />
            <br />
            <br />
            <div
              className={undefined}
              style={
                Object {
                  "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                  "backgroundColor": "#353535",
                  "borderRadius": 2,
                  "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                         0 1px 4px rgba(0, 0, 0, 0.12)",
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "inline-block",
                  "fontFamily": "Roboto, sans-serif",
                  "minWidth": 88,
                  "muiPrepared": true,
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "width": "100%",
                }
              }
            >
              <button
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "backgroundColor": "#448AFF",
                    "border": 10,
                    "borderRadius": 2,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": "inherit",
                    "fontWeight": "inherit",
                    "height": 36,
                    "lineHeight": "36px",
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "padding": 0,
                    "position": "relative",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": false,
                        "borderRadius": 2,
                        "height": 36,
                        "muiPrepared": true,
                        "top": 0,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      }
                    }
                  >
                    Add 
                    Imgur
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
    <div
      className="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4"
    >
      <a
        href="https://telegram.me/uploadbro_bot"
        rel="noopener"
        target="_blank"
      >
        <div
          className={undefined}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#353535",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "#ffffff",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "minWidth": 88,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <button
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            onTouchTap={[Function]}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "backgroundColor": "#ffffff",
                "border": 10,
                "borderRadius": 2,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "display": "inline-block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": "inherit",
                "fontWeight": "inherit",
                "height": 36,
                "lineHeight": "36px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textAlign": "center",
                "textDecoration": "none",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null,
                "width": "100%",
                "zIndex": 1,
              }
            }
            tabIndex={0}
            type="button"
          >
            <div
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                style={
                  Object {
                    "backgroundColor": false,
                    "borderRadius": 2,
                    "height": 36,
                    "muiPrepared": true,
                    "top": 0,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  }
                }
              >
                <img
                  color="#ffffff"
                  src="/assets/img/telegram.svg"
                  style={
                    Object {
                      "marginLeft": 0,
                      "marginRight": 0,
                      "verticalAlign": "middle",
                      "width": 32,
                    }
                  }
                />
              </div>
            </div>
          </button>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[
  `<Dashboard /> matches snapshot without verified user and without sites 1`
] = `
<div>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#353535",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "#ffffff",
        "fontFamily": "Roboto, sans-serif",
        "muiPrepared": true,
        "paddingBottom": 10,
        "paddingTop": 10,
        "textAlign": "center",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    You're logged in as:
    <br />
     
    <br />
    <div
      className="row center-xs"
      style={
        Object {
          "margin": 20,
        }
      }
    />
    <br />
    <div
      className="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4"
    >
      <a
        href="https://telegram.me/uploadbro_bot"
        rel="noopener"
        target="_blank"
      >
        <div
          className={undefined}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
              "backgroundColor": "#353535",
              "borderRadius": 2,
              "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                     0 1px 4px rgba(0, 0, 0, 0.12)",
              "boxSizing": "border-box",
              "color": "#ffffff",
              "display": "inline-block",
              "fontFamily": "Roboto, sans-serif",
              "minWidth": 88,
              "muiPrepared": true,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <button
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            onTouchTap={[Function]}
            style={
              Object {
                "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                "backgroundColor": "#ffffff",
                "border": 10,
                "borderRadius": 2,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "display": "inline-block",
                "fontFamily": "Roboto, sans-serif",
                "fontSize": "inherit",
                "fontWeight": "inherit",
                "height": 36,
                "lineHeight": "36px",
                "margin": 0,
                "muiPrepared": true,
                "outline": "none",
                "padding": 0,
                "position": "relative",
                "textAlign": "center",
                "textDecoration": "none",
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "verticalAlign": null,
                "width": "100%",
                "zIndex": 1,
              }
            }
            tabIndex={0}
            type="button"
          >
            <div
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                style={
                  Object {
                    "backgroundColor": false,
                    "borderRadius": 2,
                    "height": 36,
                    "muiPrepared": true,
                    "top": 0,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  }
                }
              >
                <img
                  color="#ffffff"
                  src="/assets/img/telegram.svg"
                  style={
                    Object {
                      "marginLeft": 0,
                      "marginRight": 0,
                      "verticalAlign": "middle",
                      "width": 32,
                    }
                  }
                />
              </div>
            </div>
          </button>
        </div>
      </a>
    </div>
  </div>
</div>
`;
